<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activities.EditBuyActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/org_loading"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/dpBuyEditDate"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:gravity="center|center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/tvBuyEditSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/SupplierName"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBuyEditPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/PricePerKarat"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etBuyEditPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBuyEditWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/PackageWeight"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etBuyEditWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:autofillHints="" tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBuyEditID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="מספר אסמכתא:"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etBuyEditID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBuyEditDays"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:text="@string/NumberOfDays"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etBuyEditDays"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBuyDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/swBuyEditDoneWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:showText="false"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/DoneWeight"
                    android:textIsSelectable="false"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etBuyEditDoneWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:gravity="bottom"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDoneWage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/Wage"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etBuyEditWage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:gravity="bottom"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnBuyEditSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.3"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:text="@string/Submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>
</LinearLayout>