<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/org_loading"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.05"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn2019"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/table_row"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="2019"
                android:textColor="#A6000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2020"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/table_row"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="2020"
                android:textColor="#A6000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/table_row"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="דמה"
                android:textColor="#A6000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
        android:id="@+id/ivDiamond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.7"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/diamond_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/balance"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMemo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="ממו"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBroker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="ניב"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSupplierTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1.5"
            android:background="@drawable/buttons"
            android:text="@string/suppliers"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSortingTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1.5"
            android:background="@drawable/buttons"
            android:text="@string/sorting"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClientTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1.5"
            android:background="@drawable/buttons"
            android:text="@string/clients"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBuyTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/buys"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExportTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="יצואים"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSaleTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/sales"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>